# OSlings

./: .gitignore  README.md  info.toml  rust-toolchain.toml  sync-to-repo.sh
.github/workflows/: grade.yml
docs/: classroom-features-proposal.md
exercises/00_rust_kernel_basics/: README.md  hints.md
exercises/01_boot/: README.md  hints.md
exercises/01_boot/skeleton/: entry.rs  (+1 more)
exercises/02_physical_memory/: README.md  hints.md
exercises/03_paging/: README.md  hints.md
exercises/04_processes/: README.md  hints.md
exercises/05_context_switch/: README.md  hints.md
exercises/06_scheduling/: README.md  hints.md
exercises/07_spinlocks/: README.md  hints.md
exercises/08_semaphores/: README.md  hints.md
exercises/09_virtual_memory/: README.md  hints.md
exercises/10_filesystem/: README.md  hints.md
exercises/11_devices/: README.md  hints.md
exercises/12_boot_to_life/: README.md  hints.md
exercises/13_traps/: README.md  hints.md
exercises/14_interrupts/: README.md  hints.md
exercises/15_console/: README.md  hints.md
exercises/16_shell/: README.md  hints.md
exercises/17_file_commands/: README.md  hints.md
exercises/18_user_mode/: README.md  hints.md
exercises/19_exec/: README.md  hints.md
exercises/20_file_descriptors/: README.md  hints.md
exercises/21_fork_wait/: README.md  hints.md
exercises/22_userland/: README.md  hints.md
oslings-cli/: Cargo.toml
oslings-cli/src/: cheatsheet.md  cheatsheet.rs  main.rs  model.rs  render.rs  runner.rs  tui.rs  watch.rs
rv6/: Cargo.toml  kernel.ld  rust-toolchain.toml
rv6/.cargo/: config.toml
(+112 files in other folders)
